# ad_bench

./: .gitignore  AUTHORS.md  CMakeLists.txt  CfdFortranExternFunction.hpp  CfdFunction.hpp  compile_all.sh  compile_allgcc.sh  mm_DirectFortranT1.cpp  mm_DirectFortranT2.cpp  mm_DirectT1.cpp  mm_DirectT2.cpp  mm_ReverseCoDiPackT1.cpp  mm_ReverseCoDiPackT2.cpp  mm_ReverseTapenadeT1.cpp  mm_ReverseTapenadeT2.cpp  mm_TangentCoDiPackT1.cpp  mm_TangentCoDiPackT2.cpp  mm_TangentTapenadeT1.cpp  runall.sh
Fortran/: dfo2_b.f90  dfo2_d.f90  fluxroe.f90  fluxroe_b.f90  fluxroe_d.f90
ad_bench/: ad_bench_main.cpp  centered_grad.hpp  main.cpp  main_gbench.cpp  roe_flux.hpp  sim_fields.hpp
ad_bench/benchmark/: all.hpp  codipack_reverse.cpp  codipack_reverse.hpp  codipack_tangent.cpp  codipack_tangent.hpp  cpp_direct.cpp  cpp_direct.hpp  direct.cpp  fortran_direct.cpp  fortran_direct.hpp  reverse.cpp  reverse_adept.cpp  reverse_adolc.cpp  reverse_codipack.cpp  reverse_tapenade.cpp  tangent.cpp  tangent_adept.cpp  tangent_adolc.cpp  tangent_codipack.cpp  tangent_tapenade.cpp  tapenade_reverse.cpp  tapenade_reverse.hpp  tapenade_tangent.cpp  tapenade_tangent.hpp
ad_bench/operation/: all.hpp  centered_gradient.f90  centered_gradient.hpp  centered_gradient_b.f90  centered_gradient_d.f90  roe_flux.f90  roe_flux.hpp  roe_flux_b.f90  roe_flux_d.f90
ad_bench/routines/enzyme/: enzyme_benchmarks.hpp  enzyme_functions.hpp
ad_bench/routines/tapenade/: centered_gradient_b.f90  compile.sh  main_tapenade.cc  operations.hpp  tapenade_reverse.cpp  tapenade_reverse.hpp
ad_sct_vs_oo/: CfdFunction.hpp  mm_DirectFortranT1.cpp  mm_DirectT1.cpp  mm_ReverseCoDiPackT2.cpp  mm_ReverseTapenadeT2.cpp
ad_sct_vs_oo/Fortran/: dfo2.f90  fluxroe.f90  fluxroe_d.f90
oo_OLD/: mm_TangentTapenadeT2.cpp
scripts/: clean.sh  compile_all.sh  compile_allgcc.sh  install.sh  install_adept.sh  install_adolc.sh  install_enzyme.sh  runall.sh
scripts/cmake/: FindADEPT.cmake  FindADOLC.cmake  FindENZYME.cmake
